2001-06-14  Miguel de Icaza  <miguel@ximian.com>

	* art_uta_svp.h: Rename __ART_UTA_VPATH_H__ to __ART_UTA_SVP_H__,
	as this is what the symbol was supposed to be.

2001-05-27  Mathieu Lacage <mathieu@gnu.org>

	Mother's day!!! Back in south france (4 hours of train hacking :).

	* doc/tmpl/art_memory.sgml: document.
	* doc/tmpl/art_core_construction.sgml: document.
	* doc/dia/art-2d-space.dia: add for above doc.
	* doc/art-2d-space.png: add for above doc.
	* doc/tmpl/art_construction_extended.sgml: document.
	* doc/dia/art-dash-style.dia: add for above doc.
	* doc/art-dash-style.png: add for above doc.
	* doc/tmpl/art_construction_trans.sgml: document.
	* doc/Makefile.am: add image files in there.
	* doc/libart-sections.txt: remove some functions we
	  do not want to document.

Fri May 25 12:45:56 2001  Owen Taylor  <otaylor@redhat.com>

	* doc/Makefile.am (DOC_MODULE): Fix to the point of actually building.

2001-05-22  Darin Adler  <darin@eazel.com>

        * libart_lgpl/configure.in:
	Added HTML_DIR part needed for gtk-doc build.

2001-05-22  Darin Adler  <darin@eazel.com>

        * art_affine.c: (art_affine_invert):
        Fix code that would't compile do to parameter name changes for
        documentation purposes.

        * doc/libart-decl.txt:
        * doc/tmpl/.cvsignore:
        Quiet cvs a little bit.

2001-05-20  Mathieu Lacage <mathieu@gnu.org>

	* .cvsignore: chuuut.
	* art_affine.c: (art_affine_invert): fix the documentation comments.
	* doc/Makefile.am: add image files for affine transforms:
	  art-affines.png
	  art-affine-matrix.png
	  art-affine-libart.png
	  dia/art-affine-matrix.dia
	  dia/art-affine-libart.dia
	  dia/art-affines.dia
	* doc/tmpl/art_affine.sgml: document.
	* doc/tmpl/art_gamma.sgml: nothing.
	* doc/tmpl/art_memory.sgml: nothing.

2001-05-17  Mathieu Lacage  <mathieu@gnu.org>

	* Makefile.am: add gtk-doc test.
	* configure.in: add doc subdir.

	adds draft doc for libart.
	* doc/Makefile.am:
	* doc/fdl.sgml: