@@ -88,13 +88,3 @@ These operations are sumamrized below:
 @Returns: 
 
 
-<!-- ##### FUNCTION art_svp_minus ##### -->
-<para>
-
-</para>
-
-@svp1: 
-@svp2: 
-@Returns: 
-
-
