@@ -1,3 +1,12 @@
+<!-- ##### FUNCTION art_svp_minus ##### -->
+<para>
+
+</para>
+
+@svp1: 
+@svp2: 
+@Returns: 
+
 <!-- ##### FUNCTION art_bezier_to_vec ##### -->
 <para>
 
